@@ -7,13 +7,14 @@
 + Improved: Documentation
 + Improved: mapReduce() now won't communicate intermediary results
 + Improved: Future results are now sent back directly to the worker awaiting for it
++ Improved: Reduction has now a tree communication scheme (logarithmic reduce)
 + Improved: Various socket optimizations
 
 0.6.2 (2013/07/02)
 ------------------
 
 + Fixed: Process cleanup on csh/tsh shell variants
-+ Fixed: Using partials could crash - switched identifying a Future callable from __name__ to its hash()
++ Fixed: Using partials could crash - switched Future callable identification from __name__ to its hash()
 
 0.6.1 (2013/03/04)
 ------------------
